cli/src/tests/error/join.sibs
join (:wrapper:prod; :self:prod; :self:build($mode); :self:build("dev"); "string cannot be here"; :self:build("dev"; "prod"); :self:build("dev"; $prod););
join ();